# ncnn-android

./: README.md
ncnn-android/: build.gradle  gradle.properties  local.properties
ncnn-android/app/: build.gradle
ncnn-android/app/src/main/: AndroidManifest.xml
ncnn-android/app/src/main/assets/: yolox-nano.param
ncnn-android/app/src/main/java/com/teng/ncnn/: BenchmarkNcnn.java  BenchmarkObj.java  MainActivity.java  Tncnn.java
ncnn-android/app/src/main/jni/: CMakeLists.txt  benchmarkncnn.cpp  benchmarkncnn_op.cpp  benchmarkncnn_op.h  data_struct.h  face_mesh.cpp  face_mesh.h  fash_mesh_data.h  human_matting.cpp  human_matting.h  landmark.cpp  landmark.h  nanodet.cpp  nanodet.h  ndkcamera.cpp  ndkcamera.h  tncnn_interface.cpp  yolov4.cpp  yolov4.h  yolox.cpp  yolox.h
ncnn-android/app/src/main/res/layout/: main.xml
ncnn-android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
ncnn-android/gradle/wrapper/: gradle-wrapper.properties
